@@ -1984,11 +1984,17 @@ function ShowWeathers()
 							xhtm+=      
 										'<a class="btnsmall" onclick="EditWeatherDevice(' + item.idx + ',\'' + item.Name + '\');" data-i18n="Edit">Edit</a> ';
 			  }
-					
-			  if (item.Notifications == "true")
-				xhtm+='<a class="btnsmall-sel" onclick="ShowNotifications(' + item.idx + ',\'' + item.Name + '\', \'#weathercontent\', \'ShowWeathers\');" data-i18n="Notifications">Notifications</a>';
-			  else
-				xhtm+='<a class="btnsmall" onclick="ShowNotifications(' + item.idx + ',\'' + item.Name + '\', \'#weathercontent\', \'ShowWeathers\');" data-i18n="Notifications">Notifications</a>';
+			  var bShowNotifications=true;
+			  if (item.Visibility!='undefined') {
+				bShowNotifications=false;
+			  }
+			  if (bShowNotifications==true)
+			  {
+				  if (item.Notifications == "true")
+					xhtm+='<a class="btnsmall-sel" onclick="ShowNotifications(' + item.idx + ',\'' + item.Name + '\', \'#weathercontent\', \'ShowWeathers\');" data-i18n="Notifications">Notifications</a>';
+				  else
+					xhtm+='<a class="btnsmall" onclick="ShowNotifications(' + item.idx + ',\'' + item.Name + '\', \'#weathercontent\', \'ShowWeathers\');" data-i18n="Notifications">Notifications</a>';
+			  }
 		  }
           xhtm+=      
                 '</td>\n' +
